# mkdocs-diracx-plugin

./: README.md  pyproject.toml
src/diracxdocs/: plugin.py
