[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"


[project]
name = "mkdocs-diracx-plugin"
authors = [{ name = "Christophe Haen", email = "christophe.haen@cern.ch" }]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]

dependencies = ["mkdocs", "sh"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"


[project.entry-points."mkdocs.plugins"]
diracx = "diracxdocs.plugin:DiracxDoc"



[tool.mypy]
files = [
    "src/**/*.py",
]
allow_redefinition = true
explicit_package_bases = true
strict = true
enable_error_code = ["import", "attr-defined"]


[[tool.mypy.overrides]]
module = 'sh.*'
ignore_missing_imports = true